# vk-mesh-shader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: default.frag  default.mesh  default.vert  default.vert.spv  quaternion.glsl  text.vert.spv  uniforms.glsl
src/: Camera.cpp  Camera.h  MainWin32.cpp  Mouse.cpp  Present.cpp  Present.h  Render.cpp  Render.h  RenderMesh.cpp  RenderMesh.h  State.cpp  State.h  Uniforms.h  main.cpp
